examples/i18n/contents/error/403/fr.inc.php
<p>
Vous n'êtes pas autorisé à voir cette page!
</p>
